--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+.venv
+*.egg-info/
+dist/
+build/
+
+
+# Environment
+.env
+.env.example
+
