--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 Flask==3.0.0
 flask-cors==4.0.0
+osmnx>=1.9.4
+networkx>=3.1
+geopy>=2.4.1
+requests>=2.27
+shapely>=2.0
+pandas>=1.1
+numpy>=1.20
 
